--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+  <head>
+    <link rel="stylesheet" href="main.css" />
+    <title>My second website</title>
+  </head>
 </html>
