Adding all needed elements  to html file.

--- a/index.html
+++ b/index.html
@@ -4,4 +4,44 @@
     <link rel="stylesheet" href="main.css" />
     <title>My second website</title>
   </head>
+  <body>
+
+    <div>
+    <h1>Welcome to my World</h1>
+    </div>
+
+    <div class="row">
+      <div class="col-6">
+        <h3>My Best Friend</h3>
+        <img src="cat.jpg">
+        <p>I don't know why but cats can make anything funny!</p>
+      </div>
+      <div class="col-3">
+        <h3>Column 2</h3>
+        <p>My name is Salsabeel. I used to develop mobile and desktop apps but now I'm working to be a Full Stack Web developer.</p>
+      </div>
+      <div class="col-3">
+        <h3>Column 3</h3>
+        <p>Now i'm still learning. I have to decide if ii wonna be a front-end or back-end developer. Till now i've been concentrating on front-end and i'm kind of liking it. Maybe i will choose this.</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-4">TIME</div>
+      <div class="col-4"></div>
+      <div class="col-4"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-4">TO GET</div>
+      <div class="col-4"></div>
+    </div>
+
+    <div class="row">
+      <div class="col-4"></div>
+      <div class="col-4"></div>
+      <div class="col-4">TRICKY</div>
+    </div>
+  </body>
 </html>
