Centering all text and styling the footer.

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-4">TIME</div>
+    <div class="row footer">
+      <div class="col-4"><h1>TIME</h1></div>
       <div class="col-4"></div>
       <div class="col-4"></div>
     </div>
 
-    <div class="row">
+    <div class="row footer">
       <div class="col-4"></div>
-      <div class="col-4">TO GET</div>
+      <div class="col-4"><h1>TO GET</h1></div>
       <div class="col-4"></div>
     </div>
 
-    <div class="row">
+    <div class="row footer">
       <div class="col-4"></div>
       <div class="col-4"></div>
-      <div class="col-4">TRICKY</div>
+      <div class="col-4"><h1>TRICKY</h1></div>
     </div>
   </body>
 </html>
