Adding classes and ids to website elements to prepare styling

--- a/index.html
+++ b/index.html
@@ -1,4 +1,56 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="main.css" />
+    <title>My second website</title>
+  </head>
+  <body>
 
+    <div id="header">
+      <h1 class=header-text>Welcome to my World</h1>
+    </div>
+
+
+    <section class="content-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <h3 class="col-title">My Best Friend</h3>
+            <img class="cat-img" src="cat.jpg">
+            <p class="content">I don't know why but cats can make anything funny!</p>
+          </div>
+          <div class="col-3">
+            <h3 class="col-title">Column 2</h3>
+            <p class="content">My name is Salsabeel. I used to develop mobile and desktop apps but now I'm working to be a Full Stack Web developer.</p>
+          </div>
+          <div class="col-3">
+            <h3 class="col-">Column 3</h3>
+            <p class="content">Now i'm still learning. I have to decide if ii wonna be a front-end or back-end developer. Till now i've been concentrating on front-end and i'm kind of liking it. Maybe i will choose this.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="banner-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-4"><h1 class="banner-text">TIME</h1></div>
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4"><h1 class="banner-text">TO GET</h1></div>
+          <div class="col-4"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4"></div>
+          <div class="col-4"><h1 class="banner-text">TRICKY</h1></div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
