--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="content">My name is Salsabeel. I used to develop mobile and desktop apps but now I'm working to be a Full Stack Web developer.</p>
           </div>
           <div class="col-3">
-            <h3 class="col-">Column 3</h3>
+            <h3 class="col-title">Column 3</h3>
             <p class="content">Now i'm still learning. I have to decide if ii wonna be a front-end or back-end developer. Till now i've been concentrating on front-end and i'm kind of liking it. Maybe i will choose this.</p>
           </div>
         </div>
