--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-6">
             <h3 class="col-title">My Best Friend</h3>
-            <img class="cat-img" src="cat.jpg">
+            <img class="cat-img" src="assets/cat.jpg">
             <p class="content">I don't know why but cats can make anything funny!</p>
           </div>
           <div class="col-3">
